[tool.poetry]
name = "atcoder-py"
version = "0.1.0"
description = ""
authors = ["fuyutarow <fuyutarow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
atcoder-tools = "^2.12.0"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
