[profile.dev]
opt-level = 3

[package]
edition = "2018"
name = "abc131"
version = "0.1.0"

[package.metadata.cargo-compete.bin]
abc131-a = {alias = "a", problem = "https://atcoder.jp/contests/abc131/tasks/abc131_a"}
abc131-b = {alias = "b", problem = "https://atcoder.jp/contests/abc131/tasks/abc131_b"}
abc131-c = {alias = "c", problem = "https://atcoder.jp/contests/abc131/tasks/abc131_c"}
abc131-d = {alias = "d", problem = "https://atcoder.jp/contests/abc131/tasks/abc131_d"}
abc131-e = {alias = "e", problem = "https://atcoder.jp/contests/abc131/tasks/abc131_e"}
abc131-f = {alias = "f", problem = "https://atcoder.jp/contests/abc131/tasks/abc131_f"}

[[bin]]
name = "abc131-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc131-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc131-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc131-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc131-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc131-f"
path = "src/bin/f.rs"

[dependencies]
# alga = "=0.9.3"
# ascii = "=1.0.0"
# bitset-fixed = "=0.1.0"
# either = "=1.5.3"
# fixedbitset = "=0.2.0"
# getrandom = "=0.1.14"
# im-rc = "=14.3.0"
# indexmap = "=1.3.2"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
lazy_static = "=1.4.0"
# libm = "=0.2.1"
# maplit = "=1.0.2"
# nalgebra = "=0.20.0"
# ndarray = "=0.13.0"
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-derive = "=0.3.0"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
ordered-float = "=1.0.2"
# permutohedron = "=0.2.4"
petgraph = "=0.5.0"
proconio = {version = "=0.3.6", features = ["derive"]}
rand = {version = "=0.7.3", features = ["small_rng"]}
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_distr = "=0.2.2"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
regex = "=1.3.6"
# superslice = "=1.0.0"
# text_io = "=0.1.8"
# whiteread = "=0.5.0"
# rustc-hash = "=1.1.0"
# smallvec = "=1.2.0"

ac-library-rs-parted-convolution = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-dsu = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-fenwicktree = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-lazysegtree = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-math = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-maxflow = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-mincostflow = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-modint = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-scc = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-segtree = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-string = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted-twosat = {git = "https://github.com/qryxip/ac-library-rs-parted"}
cp = {git = "https://github.com/magurofly/cp-library-rs"}

[dev-dependencies]
