[profile.dev]
opt-level = 3

[package]
edition = "2018"
name = "practice2"
version = "0.1.0"

[package.metadata.cargo-compete.bin]
practice2-a = {alias = "a", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_a"}
practice2-b = {alias = "b", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_b"}
practice2-c = {alias = "c", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_c"}
practice2-d = {alias = "d", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_d"}
practice2-e = {alias = "e", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_e"}
practice2-f = {alias = "f", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_f"}
practice2-g = {alias = "g", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_g"}
practice2-h = {alias = "h", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_h"}
practice2-i = {alias = "i", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_i"}
practice2-j = {alias = "j", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_j"}
practice2-k = {alias = "k", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_k"}
practice2-l = {alias = "l", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_l"}

[[bin]]
name = "practice2-a"
path = "src/bin/a.rs"

[[bin]]
name = "practice2-b"
path = "src/bin/b.rs"

[[bin]]
name = "practice2-c"
path = "src/bin/c.rs"

[[bin]]
name = "practice2-d"
path = "src/bin/d.rs"

[[bin]]
name = "practice2-e"
path = "src/bin/e.rs"

[[bin]]
name = "practice2-f"
path = "src/bin/f.rs"

[[bin]]
name = "practice2-g"
path = "src/bin/g.rs"

[[bin]]
name = "practice2-h"
path = "src/bin/h.rs"

[[bin]]
name = "practice2-i"
path = "src/bin/i.rs"

[[bin]]
name = "practice2-j"
path = "src/bin/j.rs"

[[bin]]
name = "practice2-k"
path = "src/bin/k.rs"

[[bin]]
name = "practice2-l"
path = "src/bin/l.rs"

[dependencies]
alga = "=0.9.3"
ascii = "=1.0.0"
bitset-fixed = "=0.1.0"
either = "=1.5.3"
fixedbitset = "=0.2.0"
getrandom = "=0.1.14"
im-rc = "=14.3.0"
indexmap = "=1.3.2"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
lazy_static = "=1.4.0"
libm = "=0.2.1"
maplit = "=1.0.2"
nalgebra = "=0.20.0"
ndarray = "=0.13.0"
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-derive = "=0.3.0"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
ordered-float = "=1.0.2"
permutohedron = "=0.2.4"
petgraph = "=0.5.0"
proconio = {version = "=0.3.6", features = ["derive"]}
rand = {version = "=0.7.3", features = ["small_rng"]}
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_distr = "=0.2.2"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
regex = "=1.3.6"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
superslice = "=1.0.0"
text_io = "=0.1.8"
whiteread = "=0.5.0"

# ac-library-rs = {git = "https://github.com/rust-lang-ja/ac-library-rs"}
# ac-library-rs-parted-convolution = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# ac-library-rs-parted-dsu = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# ac-library-rs-parted-fenwicktree = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# ac-library-rs-parted-lazysegtree = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# ac-library-rs-parted-math = {git = "https://github.com/qryxip/ac-library-rs-parted"}
ac-library-rs-parted = {git = "https://github.com/qryxip/ac-library-rs-parted"}
alds-lib = {path = "../../alds-lib"}
# alds-lib = {path = "../../alds-lib"}
# alds-lib = {path = "../../alds-lib"}
# ac-library-rs-parted-mincostflow = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# ac-library-rs-parted-modint = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# ac-library-rs-parted-scc = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# ac-library-rs-parted-segtree = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# ac-library-rs-parted-string = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# ac-library-rs-parted-twosat = {git = "https://github.com/qryxip/ac-library-rs-parted"}
# cp = {git = "https://github.com/magurofly/cp-library-rs/"}

[dev-dependencies]
